--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exam-paper-setter",
   "version": "0.1.0",
   "private": true,
-  "main": "./public/main.js",
+  "main": "./backend/main.js",
   "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -25,7 +25,7 @@
     "build-react": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-electron": "nodemon --watch ./public/* --exec \"electron .\"",
+    "start-electron": "nodemon --watch ./backend/* --exec \"electron .\"",
     "dev": "concurrently \"yarn start-react\" \"wait-on http://localhost:3000 && yarn start-electron\" ",
     "postinstall": "electron-builder install-app-deps",
     "pack-app": "yarn build-react && electron-builder --dir",
