--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "sqlite3": "^5.0.11",
     "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.0"
