--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
     "sqlite3": "^5.0.11",
     "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.0"
