--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "@babel/runtime": "^7.19.0",
     "@react-pdf-viewer/core": "3.7.0",
+    "@react-pdf-viewer/page-navigation": "^3.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.8",
-    "bulma": "^0.9.4",
-    "bulma-helpers": "^0.4.3",
     "electron-is-dev": "^2.0.0",
+    "moment": "^2.29.4",
     "pdfjs-dist": "2.15.349",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
