--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "./backend/main.js",
-  "homepage": "./",
+  "homepage": ".",
   "dependencies": {
     "@babel/runtime": "^7.19.0",
     "@react-pdf-viewer/core": "3.7.0",
@@ -35,9 +35,25 @@
     "start-electron": "nodemon --watch ./backend/* --exec \"electron .\"",
     "dev": "concurrently \"yarn start-react\" \"wait-on http://localhost:3000 && yarn start-electron\" ",
     "postinstall": "electron-builder install-app-deps",
-    "pack-app": "yarn build-react && electron-builder --dir",
+    "pack-app": "yarn build-react && robocopy backend build/ && electron-builder --dir ",
     "pack-build": "electron-builder --dir",
     "build": "yarn build-react && electron-builder"
+  },
+  "build": {
+    "extraMetadata": {
+      "main": "./build/main.js"
+    },
+    "asar": false,
+    "appId": "com.mihir.exam-paper-setter",
+    "files": [
+      "backend/*",
+      "src/**/*",
+      "src/*",
+      "node_modules/**/*"
+    ],
+    "directories":{
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
